--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
+    <!-- Bootsrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
     <title>Inicio</title>
@@ -37,54 +40,45 @@
           <button class="boton-buscar">Buscar</button>
         </div>
       </section>
-  
-      <h1>Titulo h1</h1>
-      <h2>Titulo h2</h2>
-  
-  <form action="" id="formulario">
-              <div class="hombre">hombre</div>
-              <input type="radio" name="sexo" value="hombre">
-              <div class="mujer">mujer</div>
-              <input type="radio" name="sexo" value="mujer">
-  
-              <div class="nombre">Nombre</div>
-              <input type="text" value="nombre">
-              <div class="apellido">Apellido</div>
-              <input type="text" value="apellido">
-  
-              <select name="talles" class="tallas">
-              <option value="L">Large</option>
-              <option value="M">Medium</option>
-              <option value="S">Small</option>
-              </select>
-  
-              <div class="enviar">
-                  <input type="submit" value="Enviar formulario">
-                  <input type="reset" value="Limpiar formulario">
-                  <input type="button" value="Sin acciones">
-              </div>
-  </form>
 
-  <!-- Con y sin transición -->
-  <section>
-    <div>
-      <h1>Sin transición</h1>
-      <div class="box box-uno"></div>
-    </div>
-    <div>
-      <h2>Con transición</h2>
-      <div class="box box-dos"></div>
-    </div>
-  </section>
-
-  <!-- Circulos -->
-  <section class="container-circle">
-    <div class="circle1"></div>
-    <div class="circle2"></div>
-    <div class="circle3"></div>
-    <div class="circle4"></div>
-    <div class="circle5"></div>
-  </section>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
   
   <!-- no se como hacer que se vea mas pequeña :c -->
   
@@ -94,5 +88,9 @@
   
         <!-- Lo dejare para el copyright y las redes sociales -->
         <footer>redes sociales copyright</footer>
+
+        <!-- Bootstrap JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   </body>
   </html>
