--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <title>Inicio</title>
     <body>
 
-      <header class="header-container">
+      <!-- 
+        <header class="header-container">
         <div class="header">
           <div class="home"></div>
           <a href="index.html">Home</a>
@@ -29,6 +30,34 @@
           <div class="perfil"></div>
           <a href="perfil.html">Mi perfil</a>
         </div>
+      </header>
+      --> <!-- Header anterior -->
+
+      <header> <!-- Header nuevo con bootstrap -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="reservas.html">Mis reservas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="foro.html">Foro</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="perfil.html">Perfil</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </header>
       
       <section id="buscador">
@@ -49,21 +78,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="13-Puma-Huemul-Condor-Ñandu-Guanaco-Patagonia-Fotografia-Paisaje-Naturaleza-Parque-Safari-Chile-Torres-del-Paine-Viaje-Tour-Paquete-1024x690.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="Huemul.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="Andean-Condor-Flying-6-1.jpg" class="d-block w-100" alt="..."> 
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -79,13 +108,14 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
   
-  <!-- no se como hacer que se vea mas pequeña :c -->
-  
-        <div class="imagen_1">
+  <!-- 
+      <div class="imagen_1">
           <img src="Laguna amarga.jpg" alt="">
       </div>
-  
+  -->
+
         <!-- Lo dejare para el copyright y las redes sociales -->
         <footer>redes sociales copyright</footer>
 
