--- a/reservas.html
+++ b/reservas.html
@@ -11,6 +11,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--
     <header class="header-container">
         <div class="header">
           <div class="home"></div>
@@ -22,6 +23,34 @@
           <div class="perfil"></div>
           <a href="perfil.html">Mi perfil</a>
         </div>
+      </header>
+    -->
+    
+    <header> <!-- Header nuevo con bootstrap -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="reservas.html">Mis reservas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="foro.html">Foro</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="perfil.html">Perfil</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </header>
 
     <ul>
